--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container fade-in">
-    <img src="your-photo.jpg" alt="Rawan AlMakinah" class="profile-pic">
+    <img src="photo.jpg" alt="Rawan AlMakinah" class="profile-pic">
 
     <h1>Rawan AlMakinah</h1>
     <h2>PhD Student | Adjunct Faculty</h2>
