--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="photo.png" alt="Rawan AlMakinah" class="profile-pic">
 
     <h1>Rawan AlMakinah</h1>
-    <h2>PhD Student | Adjunct Faculty</h2>
-    <p class="info">Information Science | Data Analytics</p>
-    <p class="info">Human-Centered AI | Digital Mental Health</p>
+    <h2>PhD Student in Information Science | Adjunct Faculty</h2>
+    <p class="info"> Major: Data Analytics | Minor: HCI</p>
+    <p class="info"> Research Interest: Human-Centered AI | Digital Mental Health</p>
     <p class="info">University at Albany, SUNY</p>
 
     <div class="links">
