--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <h1>Rawan AlMakinah</h1>
     <h2>PhD Student in Information Science | Adjunct Faculty</h2>
-    <p class="info"> Major: Data Analytics | Minor: HCI</p>
-    <p class="info"> Research Interest: Human-Centered AI | Digital Mental Health</p>
+    <p class="info"> <strong>Major:</strong> Data Analytics | Minor: HCI</p>
+    <p class="info"> <strong><Research Interest:</strong> Human-Centered AI | Digital Mental Health</p>
     <p class="info">University at Albany, SUNY</p>
 
     <div class="links">
